--- a/src/app/html-tags/html-tags.component.html
+++ b/src/app/html-tags/html-tags.component.html
@@ -203,7 +203,7 @@
       </fieldset>
       Reset <input type="reset" />
       <br />
-      Submit <input type="submit" />
+      submit <input type="submit" />
       <br />
       <br>
     </form>
