--- a/src/app/html-tags/html-tags.component.html
+++ b/src/app/html-tags/html-tags.component.html
@@ -201,7 +201,7 @@
         <legend>Calender</legend>
         Date <input type="datetime-local"/>
       </fieldset>
-      Reset <input type="reset" />
+      reset <input type="reset" />
       <br />
       submit <input type="submit" />
       <br />
